--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -103,11 +103,14 @@ html body #app .main-screen .flows .selected-flow .flow-code-result .code-panel 
 }
 
 html body #app .main-screen .flows .selected-flow .flow-code-result .traces {
-  width: 1000px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 html body #app .main-screen .flows .selected-flow .flow-code-result .traces .trace {
   cursor: pointer;
+  width: 1000000px;
 }
 
 html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel {
@@ -123,6 +126,65 @@ html body #app .main-screen .flows .selected-flow .flow-code-result .result-pane
 }
 
 html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel .result {
-  height: 97%;
+  height: 60%;
   padding-top: 10px;
+}
+
+html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel .locals {
+  padding: 0;
+  list-style-type: none;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: 33%;
+}
+
+html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel .locals li {
+  cursor: pointer;
+  width: 1000000px;
+  padding: 3px;
+  font-size: 13px;
+}
+
+html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel .locals li .symbol {
+  background-color: #7e8f89;
+  margin-right: 10px;
+  padding: 0px 3px 0px 3px;
+  border-radius: 3px;
+}
+
+html body #app .main-screen .flows .selected-flow .flow-code-result .result-panel .locals li:nth-child(odd) {
+  background-color: #25282f;
+}
+
+html body #app .main-screen .flows .selected-flow .local-panel-overlay {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  background-color: #292c34;
+}
+
+html body #app .main-screen .flows .selected-flow .local-panel {
+  position: absolute;
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  left: 25%;
+  background-color: #292c34;
+  z-index: 10;
+}
+
+html body #app .main-screen .flows .selected-flow .local-panel .symbol {
+  text-align: center;
+  font-weight: bold;
+  background-color: #7e8f89;
+}
+
+html body #app .main-screen .flows .selected-flow .local-panel .value {
+  height: 92%;
+  padding: 10px;
+  overflow: scroll;
 }
