Giving the calls panel some more love

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -180,12 +180,30 @@ html body #app .main-screen .flows .selected-flow .result-panel .result-tab-cont
   padding-left: 10px;
   border-left: 1px solid grey;
   width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent .call.active {
+  background-color: #902638;
+}
+
+html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent .call .fn-name {
+  font-weight: bold;
+  margin-right: 10px;
 }
 
 html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent div {
-  margin-bottom: 3px;
   white-space: nowrap;
   cursor: pointer;
+}
+
+html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent div .return.active {
+  background-color: #902638;
+}
+
+html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent div .return .fn-result {
+  color: pink;
 }
 
 html body #app .main-screen .flows .selected-flow .result-panel .result-tab-content .calls .indent div .return .fn-name {
