Fix auto theming system and add utilities to test it on non gnome linux

--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -3,7 +3,7 @@
 	-fx-theme-base2:                              #3f474f; 
 	-fx-theme-base3:                              #2f353b;
 
-	-fx-theme-separator:                          orange
+	-fx-theme-separator:                          orange;
 	-fx-theme-dim-text:                           #919191;
     -fx-theme-button1-background:                 #336699;
 	-fx-theme-button1-text:                       white;
