Disable runtime api cache where it doesn't make sense

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -165,7 +165,7 @@
 }
 
 .browser-instr-type-lbl {
-	-fx-text-fill: -fx-theme-base1;
+	-fx-text-fill: -fx-theme-dim-text;
 }
 
 .browser-instr-tools-box {
