--- a/resources/styles.css
+++ b/resources/styles.css
@@ -56,6 +56,15 @@
     -fx-prompt-text-fill: -fx-theme-button2-text;
 }
 
+.conn-status-lbl.ok {
+	-fx-background-color: -fx-theme-ok;
+	-fx-text-fill: #323232;
+}
+.conn-status-lbl.fail {
+	-fx-background-color: -fx-theme-fail;
+	-fx-text-fill: #323232;
+}
+
 .tree-search {
 	-fx-background-insets: 1 0 1 0;
 }
