Add single var recursive instrumentation to the browser

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -169,6 +169,10 @@
 	visibility: visible;
 }
 
+.browser-var-buttons {
+	-fx-padding: 10;
+}
+
 .browser-instr-del-btn {
     -fx-font-size: 10;
 }
