--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -24,6 +24,8 @@
 	-fx-theme-breadcrums:                         #de00c0;
 	-fx-theme-ok:                                 #00ff00;
 	-fx-theme-fail:                               #ff0000;
+	-fx-theme-title-label:                        orange;
+	-fx-theme-field-label:                        #de00c0;
 }
 
 .root {
