--- a/resources/theme_light.css
+++ b/resources/theme_light.css
@@ -24,6 +24,8 @@
 	-fx-theme-breadcrums:                         #9c0084;
 	-fx-theme-ok:                                 #00ff00;
 	-fx-theme-fail:                               #ff0000;
+	-fx-theme-title-label:                        #336699;
+	-fx-theme-field-label:                        #9c0084;
 }
 
 .root {
