Call tree forms hints

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -39,6 +39,10 @@
 	-fx-cursor: hand;
 }
 
+.light {
+	-fx-opacity: 0.3;
+}
+
 .button:hover {
         -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, -fx-body-color;
         -fx-color: -fx-hover-base;
