--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -26,6 +26,8 @@
 	-fx-theme-fail:                               #ff0000;
 	-fx-theme-title-label:                        orange;
 	-fx-theme-field-label:                        #de00c0;
+	-fx-theme-breakpoint:                         #ff0000;
+	-fx-theme-breakpoint-continue:                #60d61b;
 }
 
 .root {
