Revert "Improve UI performance when stepping over big forms"
This reverts commit 2916bd2a50c8dcd5cbc6beaa23a3feab6f4534ec.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -125,7 +125,9 @@
 }
 .code-token.executing {
     -fx-stroke: -fx-theme-flow-code-executing-text;
-    -fx-fill: -fx-theme-flow-code-executing-text;    
+	-fx-font-size: 15;
+	-fx-fill: -fx-theme-flow-code-executing-text;
+	-fx-stroke-width: 1;
 }
 
 .code-token.interesting {
