--- a/resources/styles.css
+++ b/resources/styles.css
@@ -91,8 +91,8 @@
 }
 
 .form-pane.form-background-highlighted {
-	-fx-background-color: -fx-theme-base3;
-}
+	-fx-background-color: -fx-theme-form-highlight;
+} 
 
 .label.defmethod {
 	-fx-text-fill: -fx-theme-defmethod-text;
