--- a/resources/styles.css
+++ b/resources/styles.css
@@ -84,17 +84,17 @@
     -fx-prompt-text-fill: -fx-theme-button2-text;
 }
 
-.label.ok {
+.ok {
 	-fx-background-color: -fx-theme-ok;
 	-fx-text-fill: #323232;
 }
 
-.label.warning {
+.warning {
 	-fx-background-color: -fx-theme-warning;
 	-fx-text-fill: #323232;
 }
 
-.label.fail {
+.fail {
 	-fx-background-color: -fx-theme-fail;
 	-fx-text-fill: #323232;
 }
