--- a/resources/theme_dark.css
+++ b/resources/theme_dark.css
@@ -15,7 +15,7 @@
 	-fx-theme-selected-main-tools-tab-text:       white;	
     
     -fx-theme-flow-code-text:                     #FFF;
-	-fx-theme-flow-code-executing-text:           #60d61b;
+	-fx-theme-flow-code-executing-text:           #91ed91;
 	-fx-theme-flow-code-interesting-text:         #de00c0;
 	
 	-fx-theme-defmethod-text:                     #de00c0;
