--- a/resources/theme_light.css
+++ b/resources/theme_light.css
@@ -15,7 +15,7 @@
 	-fx-theme-selected-main-tools-tab-text:       white;	
     
     -fx-theme-flow-code-text:                     #0b0d2e;
-	-fx-theme-flow-code-executing-text:           #60d61b;
+	-fx-theme-flow-code-executing-text:           #40b840;
 	-fx-theme-flow-code-interesting-text:         #de00c0;
 	
 	-fx-theme-defmethod-text:                     #9c0084;
